more release prep

--- a/xunit.runners.maui/xunit.runners.maui.csproj
+++ b/xunit.runners.maui/xunit.runners.maui.csproj
@@ -32,6 +32,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Nerdbank.GitVersioning" Version="3.5.107">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="xunit" Version="2.4.1" />
 		<PackageReference Include="xunit.runner.utility" Version="2.4.1" />
 		<!--<PackageReference Include="Microsoft.DotNet.XHarness.TestRunners.Xunit" Version="1.0.0-prerelease.21558.2" />-->
@@ -47,7 +51,7 @@
 		<!--<Compile Include="Platforms\Shared\**\*.cs" />-->
 	</ItemGroup>
 
-	
+
 	<ItemGroup Condition="$(TargetFramework.Contains('android'))">
 		<Compile Include="Platforms\Android\**\*.cs" />
 		<!--<Compile Include="Platforms\Shared\**\*.cs" />-->
