--- a/xunit.runners.maui/xunit.runners.maui.csproj
+++ b/xunit.runners.maui/xunit.runners.maui.csproj
@@ -10,15 +10,17 @@
 
 		<Authors>xunit,Microsoft,aritchie</Authors>
 		<Owners>aritchie,shinylib</Owners>
-		<PackageId>Shiny.XUnit.Runners.Maui</PackageId>
+		<!--<PackageId>Shiny.XUnit.Runners.Maui</PackageId>-->
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/shinyorg/xunit-maui</PackageProjectUrl>
-		<PackageIcon>nuget.png</PackageIcon>
 		<PackageReleaseNotes>https://github.com/shinyorg/xunit-maui</PackageReleaseNotes>
+		<PackageIcon>icon.png</PackageIcon>
 		<PackageTags>maui xunit testing tests</PackageTags>
 		<PackageReadmeFile>readme.md</PackageReadmeFile>
-		<RepositoryUrl>https://github.com/shinyorg/xunit-maui</RepositoryUrl>
-		<RepositoryType>git</RepositoryType>
+
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">14.0</SupportedOSPlatformVersion>
@@ -26,19 +28,13 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
+		<RepositoryType>git</RepositoryType>
+		<RepositoryUrl>https://github.com/shinyorg/xunit-maui</RepositoryUrl>
+		<Description>MAUI devices xunit runner</Description>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
 		<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
-	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)' == 'Release'">
-		<IncludeSource>True</IncludeSource>
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<GenerateDocumentationFile>true</GenerateDocumentationFile>
-		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
-		<PublishRepositoryUrl>True</PublishRepositoryUrl>
-		<EmbedUntrackedSources>True</EmbedUntrackedSources>
 	</PropertyGroup>
 	
 	<ItemGroup>
@@ -56,7 +52,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="$(MSBuildThisFileDirectory)nuget.png" Pack="true" PackagePath="nuget.png" />
+		<None Include="$(MSBuildThisFileDirectory)..\nuget.png" Pack="true" PackagePath="icon.png" />
+		<None Include="$(MSBuildThisFileDirectory)..\readme.md" Pack="true" PackagePath="readme.md" />
 		<None Include="Platforms\**\*.cs" />
 		<Compile Remove="Platforms\**\*.cs" />
 	</ItemGroup>
