--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
       run: dotnet workload install maui
  
     - name: Build
-      run: dotnet build -property:PublicRelease=true -property:Configuration=Release
+      run: dotnet build .\xunit.runners.maui\xunit.runners.maui.csproj /p:PublicRelease=true /p:Configuration=Release
 
     - name: Post NuGet Artifacts
       uses: actions/upload-artifact@v2
