--- a/Sample/Sample.csproj
+++ b/Sample/Sample.csproj
@@ -15,6 +15,7 @@
 		<ApplicationIdGuid>95A5FA8C-5B77-42A8-8F3F-35F8E948CE52</ApplicationIdGuid>
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
 		<ApplicationVersion>1</ApplicationVersion>
+		<IsPackable>false</IsPackable>
 
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">14.2</SupportedOSPlatformVersion>
