--- a/xunit.runners.maui/xunit.runners.maui.csproj
+++ b/xunit.runners.maui/xunit.runners.maui.csproj
@@ -5,22 +5,28 @@
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net6.0-windows10.0.19041.0</TargetFrameworks>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
+		<OutputType>Library</OutputType>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 
-		<Authors>xunit,Microsoft,aritchie</Authors>
-		<Owners>aritchie,shinylib</Owners>
-		<!--<PackageId>Shiny.XUnit.Runners.Maui</PackageId>-->
+		<IsPackable>true</IsPackable>
+		<Description>MAUI devices xunit runner</Description>
+		<Authors>xunit;Microsoft;aritchie</Authors>
+		<Owners>aritchie;shinylib</Owners>
+	
+		<PackageId>Shiny.XUnit.Runners.Maui</PackageId>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-		<PackageProjectUrl>https://github.com/shinyorg/xunit-maui</PackageProjectUrl>
-		<PackageReleaseNotes>https://github.com/shinyorg/xunit-maui</PackageReleaseNotes>
 		<PackageIcon>icon.png</PackageIcon>
 		<PackageTags>maui xunit testing tests</PackageTags>
 		<PackageReadmeFile>readme.md</PackageReadmeFile>
-
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageProjectUrl>https://github.com/shinyorg/xunit-maui</PackageProjectUrl>
+		<PackageReleaseNotes>https://github.com/shinyorg/xunit-maui</PackageReleaseNotes>
+		<RepositoryUrl>https://github.com/shinyorg/xunit-maui</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">14.0</SupportedOSPlatformVersion>
@@ -28,9 +34,6 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
-		<RepositoryType>git</RepositoryType>
-		<RepositoryUrl>https://github.com/shinyorg/xunit-maui</RepositoryUrl>
-		<Description>MAUI devices xunit runner</Description>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
@@ -60,18 +63,14 @@
 
 	<ItemGroup Condition="$(TargetFramework.Contains('windows'))">
 		<Compile Include="Platforms\Windows\**\*.cs" />
-		<!--<Compile Include="Platforms\Shared\**\*.cs" />-->
 	</ItemGroup>
 
 
 	<ItemGroup Condition="$(TargetFramework.Contains('android'))">
 		<Compile Include="Platforms\Android\**\*.cs" />
-		<!--<Compile Include="Platforms\Shared\**\*.cs" />-->
 	</ItemGroup>
 
 	<ItemGroup Condition="$(TargetFramework.Contains('ios')) OR $(TargetFramework.Contains('maccatalyst'))">
 		<Compile Include="Platforms\Apple\**\*.cs" />
-		<!--<Compile Include="Platforms\Shared\**\*.cs" />-->
-		<!--<Compile Include="Platforms\iOS\**\*.cs" />-->
 	</ItemGroup>
 </Project>
